<resources>
    <string name="app_name">Local Events Hub - Project 2 CST-338</string>
    <string name="local_events_hub">Local Events Hub</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In!</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_out">Log out</string>
    <string name="calendar">Calendar</string>
    <string name="find_events">find events</string>
    <string name="put_in_your_zip_code">put in your zip code</string>
    <string name="current_events">Current events</string>
    <string name="admin_user">Admin User</string>
    <string name="login_out">LogIN / OUT</string>
    <string name="user">User</string>
    <string name="current_event_list">Current Event List</string>
    <string name="admin_things">Admin Things</string>
    <string name="welcome_to_the_local_events_hub_n_create_your_new_account_today">Welcome to the Local Events Hub! \nCreate Your New Account Today!</string>
    <string name="create_a_username">Create a username</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_account">Create Account!</string>
    <string name="enter_your_zipcode">Enter your zipcode</string>
    <string name="look_through_current_events_in_the_calendar">Look through current events in the calendar</string>
    <string name="search_for_events">Search for events</string>
    <string name="search">Search</string>
    <string name="results_will_appear_here">Results will appear here</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="event_title">Event Title</string>
    <string name="arrow"><![CDATA[<--]]></string>
    <string name="may_2025">May</string>
    <string name="OtherArrow"><![CDATA[-->]]></string>
    <string name="prev">prev</string>
    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tues</string>
    <string name="wed">wed</string>
    <string name="thur">thur</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="click_here">Click Here</string>
    <string name="add_events">Add Events</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="submit">SUBMIT!</string>
    <string name="enter_event_name">Enter Event Name:</string>
    <string name="enter_event_time">Enter Event Time:</string>
    <string name="enter_event_type">Enter Event Type:</string>
</resources>