<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/LogOut"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:text="@string/log_out"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:text="@string/calendar"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventFinderLabelTextView"
        android:layout_width="154dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="236dp"
        android:text="@string/find_events"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogOut" />

    <EditText
        android:id="@+id/ZipCodeInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="@string/put_in_your_zip_code"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventFinderLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/eventFinderLabelTextView" />

    <EditText
        android:id="@+id/CurrentEvents"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="380dp"
        android:text="@string/current_events"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>