<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLandingPage">


    <TextView
        android:id="@+id/admin_user"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/admin_user"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LogIN_OUT_BUTTON"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/login_out"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_user" />

    <Button
        android:id="@+id/addEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="#0000FF"
        android:text="@string/add_events"
        android:textSize="48sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LogIN_OUT_BUTTON" />

    <Button
        android:id="@+id/current_event_list_BUTTON"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="#0000FF"
        android:text="@string/current_event_list"
        android:textSize="48sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addEvents" />

    <Button
        android:id="@+id/admin_thing_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="#0000FF"
        android:text="@string/admin_things"
        android:textSize="48sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_event_list_BUTTON" />


</androidx.constraintlayout.widget.ConstraintLayout>