<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/colorBox"
        android:layout_width="450dp"
        android:layout_height="125dp"
        android:background="#4CAF50"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/admin_user"
        android:layout_width="425dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:gravity="center"

        android:text="@string/admin_user"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@id/colorBox"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/LogIN_OUT_BUTTON"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginStart="448dp"
        android:background="#F4BBFF"
        android:gravity="center"
        android:text="@string/login_out"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/users_BUTTON"
        android:layout_width="752dp"
        android:layout_height="368dp"
        android:background="#0000FF"
        android:backgroundTint="#0000FF"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="190dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/current_event_list_BUTTON"
        android:layout_width="752dp"
        android:layout_height="368dp"
        android:background="#0000FF"
        android:backgroundTint="#0000FF"
        android:text="@string/current_event_list"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="592dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/admin_thing_button"
        android:layout_width="752dp"
        android:layout_height="186dp"
        android:background="#0000FF"
        android:backgroundTint="#0000FF"
        android:text="@string/admin_things"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="988dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>