<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LocalEventsHubTextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/local_events_hub"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserNameInputStringEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LocalEventsHubTextView" />

    <EditText
        android:id="@+id/PasswordInputStringEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:autofillHints="Enter your password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UserNameInputStringEditText" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/sign_in"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordInputStringEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>